--- a/modules/ROOT/pages/7.2-release-notes.adoc
+++ b/modules/ROOT/pages/7.2-release-notes.adoc
@@ -229,7 +229,7 @@ In {productname} 6.4.1, a link:https://www.tiny.cloud/docs/tinymce/6/6.4.1-relea
 
 As a result, the `autoresize_bottom_margin` was not consistently applied in certain scenarios.
 
-In {productname} {release-version}, this issue has been resolved, and the `autoresize_bottom_margin` is now reliably applied in all scenarios.
+In {productname} {release-version}, this issue has been resolved, and the `autoresize_bottom_margin` is now reliably applied.
 
 
 [[security-fixes]]
