--- a/modules/ROOT/pages/7.2-release-notes.adoc
+++ b/modules/ROOT/pages/7.2-release-notes.adoc
@@ -371,6 +371,15 @@ The above code will log the following to the console:
 
 {productname} {release-version} also includes the following bug fix<es>:
 
+=== `autoresize_bottom_margin` was not reliably applied in some situations.
+// #TINY-10793
+
+In {productname} 6.4.1, a link:https://www.tiny.cloud/docs/tinymce/6/6.4.1-release-notes/#editor-increases-the-height-indefinitely-when-using-autoresize-with-content_css-document[fix] addressed an issue where the editor's height would increase indefinitely when using the xref:autoresize.adoc[Autoresize] plugin with `content_css` set to `document`. This fix inadvertently caused a regression, resulting in the editor occasionally failing to apply bottom padding correctly.
+
+As a result, the `autoresize_bottom_margin` was not consistently applied in certain scenarios.
+
+In {productname} {release-version}, this issue has been resolved, and the `autoresize_bottom_margin` is now reliably applied.
+
 === Deleting in a `div` with preceding `br` elements would sometimes throw errors.
 // #TINY-10840
 
