--- a/modules/ROOT/pages/7.2-release-notes.adoc
+++ b/modules/ROOT/pages/7.2-release-notes.adoc
@@ -281,6 +281,18 @@ The above code will log the following to the console:
 
 Previously in {productname}, the `referrerpolicy` attribute was not considered as valid for iframe elements. In {productname} {release-version}, this attribute has been added to the schema, allowing users to include the `referrerpolicy` attribute in iframes.
 
+=== Added support for querying the state of the `mceTogglePlainTextPaste` command.
+// #TINY-10938
+
+In {productname} {release-version}, the `mceTogglePlainTextPaste` command has been updated to support querying its state. This allows users to determine whether the paste-as-text mode is currently active.
+
+The `mceTogglePlainTextPaste` command can be queried using the following API:
+
+[source,js]
+----
+tinymce.activeEditor.queryCommandState('mceTogglePlainTextPaste');
+----
+
 
 [[changes]]
 == Changes
