--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -406,7 +406,13 @@
 * Release information
 ** xref:release-notes.adoc[Release notes for {productname} {productmajorversion}]
 *** {productname} 7.2
-//
+**** xref:7.2-release-notes.adoc#overview[Overview]
+**** xref:7.2-release-notes.adoc#accompanying-premium-self-hosted-server-side-component-changes[Accompanying Premium self-hosted server-side component changes]
+**** xref:7.2-release-notes.adoc#accompanying-premium-plugin-changes[Accompanying Premium plugin changes]
+**** xref:7.2-release-notes.adoc#improvements[Improvements]
+**** xref:7.2-release-notes.adoc#additions[Additions]
+**** xref:7.2-release-notes.adoc#changes[Changes]
+**** xref:7.2-release-notes.adoc#bug-fixes[Bug fixes]
 *** {productname} 7.1.2
 **** xref:7.1.2-release-notes.adoc#overview[Overview]
 **** xref:7.1.2-release-notes.adoc#accompanying-premium-plugin-changes[Accompanying Premium Plugin changes]
