Fix merge conflict in changelog.adoc

--- a/modules/ROOT/pages/changelog.adoc
+++ b/modules/ROOT/pages/changelog.adoc
@@ -47,7 +47,7 @@ NOTE: This is the {productname} Community version changelog. For information abo
 == 7.1.2 - 2024-06-05
 
 === Fixed
-* CSS color values set to `transparent` were incorrectly converted to '#000000`.
+* CSS color values set to `transparent` were incorrectly converted to `+#000000+`.
 // #TINY-10916
 
 == 7.1.1 - 2024-05-22
