--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -405,6 +405,17 @@
 ** xref:tinymce-and-cors.adoc[Cross-Origin Resource Sharing (CORS)]
 * Release information
 ** xref:release-notes.adoc[Release notes for {productname} {productmajorversion}]
+*** {productname} 7.3
+**** xref:7.3-release-notes.adoc#overview[Overview]
+**** xref:7.3-release-notes.adoc#accompanying-premium-plugin-changes[Accompanying Premium plugin changes]
+**** xref:7.3-release-notes.adoc#accompanying-enhanced-skins-and-icon-packs-changes[Accompanying Enhanced Skins & Icon Packs changes]
+**** xref:7.3-release-notes.adoc#improvements[Improvements]
+**** xref:7.3-release-notes.adoc#additions[Additions]
+**** xref:7.3-release-notes.adoc#changes[Changes]
+**** xref:7.3-release-notes.adoc#removed[Removed]
+**** xref:7.3-release-notes.adoc#bug-fixes[Bug fixes]
+**** xref:7.3-release-notes.adoc#security-fixes[Security fixes]
+**** xref:7.3-release-notes.adoc#known-issues[Known issues]
 *** {productname} 7.2
 **** xref:7.2-release-notes.adoc#overview[Overview]
 **** xref:7.2-release-notes.adoc#accompanying-premium-self-hosted-server-side-component-changes[Accompanying Premium self-hosted server-side component changes]
