--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -405,6 +405,9 @@
 ** xref:tinymce-and-cors.adoc[Cross-Origin Resource Sharing (CORS)]
 * Release information
 ** xref:release-notes.adoc[Release notes for {productname} {productmajorversion}]
+*** {productname} 7.2.1
+**** xref:7.2.1-release-notes.adoc#overview[Overview]
+**** xref:7.2.1-release-notes.adoc#bug-fixes[Bug fixes]
 *** {productname} 7.2
 **** xref:7.2-release-notes.adoc#overview[Overview]
 **** xref:7.2-release-notes.adoc#accompanying-premium-self-hosted-server-side-component-changes[Accompanying Premium self-hosted server-side component changes]
