--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -290,6 +290,10 @@
 *** xref:advanced-templates.adoc[Advanced Templates]
 *** xref:advanced-typography.adoc[Advanced Typography]
 *** xref:ai.adoc[AI Assistant]
+**** xref:ai-openai.adoc[OpenAI ChatGPT integration guide]
+**** xref:ai-azure.adoc[Azure AI integration guide]
+**** xref:ai-bedrock.adoc[Amazon Bedrock integration guide]
+**** xref:ai-gemini.adoc[Google Gemini integration guide]
 **** xref:ai-proxy.adoc[AI proxy server reference guide]
 *** xref:casechange.adoc[Case Change]
 *** xref:checklist.adoc[Checklist]
