--- a/modules/ROOT/pages/ai.adoc
+++ b/modules/ROOT/pages/ai.adoc
@@ -2,7 +2,7 @@
 :navtitle: AI Assistant
 :description: Sends queries to registered AI APIs and sets the results in the document or temporarily stores the results.
 :description_short: Query AI APIs and accept results.
-:keywords: plugin, ai, artificial intelligence, query, search.
+:keywords: plugin, ai, artificial intelligence, query, search, llm, gpt, assistant
 :pluginname: AI Assistant
 :plugincode: ai
 :plugincategory: premium
@@ -21,58 +21,28 @@ Once a response is generated and displayed within the dialog, the user can choos
 
 Users can retrieve a history of their conversations with the AI using the xref:#getThreadLog[`getThreadLog` API], including any discarded responses.
 
-[NOTE]
-.{pluginname} demo
-====
-Demos containing the {pluginname} plugin are currently only available on our main website. Check out https://www.tiny.cloud/tinymce/features/ai-integration/[the {pluginname} demo], or the https://www.tiny.cloud/[demo on our home page], to try it out today.
-====
+== Interactive example
+
+NOTE: This example uses a proxy endpoint to communicate with the OpenAI API. This is done to avoid exposing the API key in the client-side code. For more information on using a proxy server with the {pluginname} plugin, see the xref:ai-proxy.adoc[AI Proxy Server reference guide].
+
+liveDemo::ai[]
 
 == Basic setup
 
-To add the {pluginname} plugin to the editor, add both `{plugincode}` to the `plugins` option in the editor configuration and the `ai_request` function to the editor configuration.
+To add the {pluginname} plugin to the editor, follow these steps:
 
-For example, interfacing with the OpenAI Completions API:
+- Add `{plugincode}` to the `plugins` option in the editor configuration.
+- Add the `ai_request` function to the editor configuration.
+
+For example:
 
 [source,js]
 ----
-// This example stores the API key in the client side integration. This is not recommended for any purpose.
-// Instead, an alternate method for retrieving the API key should be used.
-const api_key = '<INSERT_API_KEY_HERE>';
-
 tinymce.init({
-  selector: 'textarea',  // Change this value according to your HTML
+  selector: 'textarea',  // change this value according to your HTML
   plugins: 'ai',
   toolbar: 'aidialog aishortcuts',
-  ai_request: (request, respondWith) => {
-    const openAiOptions = {
-      method: 'POST',
-      headers: {
-        'Content-Type': 'application/json',
-        'Authorization': `Bearer ${api_key}`
-      },
-      body: JSON.stringify({
-        model: 'gpt-3.5-turbo',
-        temperature: 0.7,
-        max_tokens: 800,
-        messages: [{ role: 'user', content: request.prompt }],
-      })
-    };
-    respondWith.string((signal) => window.fetch('https://api.openai.com/v1/chat/completions', { signal, ...openAiOptions })
-      .then(async (response) => {
-        if (response) {
-          const data = await response.json();
-          if (data.error) {
-            throw new Error(`${data.error.type}: ${data.error.message}`);
-          } else if (response.ok) {
-            // Extract the response content from the data returned by the API
-            return data?.choices[0]?.message?.content?.trim();
-          }
-        } else {
-          throw new Error('Failed to communicate with the ChatGPT API');
-        }
-      })
-    );
-  }
+  ai_request: <AI_REQUEST_FUNCTION>,
 });
 ----
 
@@ -93,9 +63,9 @@ NOTE: The xref:ai-proxy.adoc[AI Proxy Server reference guide] is, as its name no
 
 The following configuration options affect the behavior of the {pluginname} plugin.
 
-include::partial$configuration/ai_request.adoc[][leveloffset=+1]
+include::partial$configuration/ai_request.adoc[leveloffset=+1]
 
-include::partial$configuration/ai_shortcuts.adoc[][leveloffset=+1]
+include::partial$configuration/ai_shortcuts.adoc[leveloffset=+1]
 
 include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 
