--- a/-new-material-templates/plugin-documentation-templates/ROOT/partials/toolbar-button-ids/{plugincode}-toolbar-buttons.adoc
+++ b/-new-material-templates/plugin-documentation-templates/ROOT/partials/toolbar-button-ids/{plugincode}-toolbar-buttons.adoc
@@ -2,10 +2,6 @@
 |===
 |Toolbar button identifier |Description
 
-|`+ai-button-1+` |Description one.
-|`+ai-button-2+` |Description two.
-|`+ai-button-3+` |Description three.
-|`+ai-button-n+` |Description en.
+|`+toolbar-button-id-1+`   |<Description one.>
+|`+toolbar-button-id-2+`   |<Description two.>
 |===
-
-// Remove all comment lines and comment blocks before publishing.
