--- a/modules/ROOT/pages/7.2.1-release-notes.adoc
+++ b/modules/ROOT/pages/7.2.1-release-notes.adoc
@@ -21,7 +21,9 @@ include::partial$misc/admon-releasenotes-for-stable.adoc[]
 
 {productname} {release-version} also includes the following bug fix<es>:
 
-=== <TINY-vwxyz 1 changelog entry>
-// #TINY-vwxyz1
+=== Long translations of the bottom help text would cause minor graphical issues.
+// #TINY-10961
 
-// CCFR here.
+Previously, resizing the editor caused the statusbar to render the help text incorrectly if it was too long. This was particularly problematic for long translations, as the statusbar did not handle extended text properly, leading to visual misalignment and hiding important elements.
+
+To fix this, the statusbar's CSS was updated to handle overflow text by setting properties like `overflow: hidden;` and adjusting the text height. As a result, the help text now overflows without disrupting the statusbar layout, ensuring a consistent appearance and visibility.
